; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/audio-monitoring/pulse/extr_pulseaudio-wrapper.c_pulseaudio_connect_playback.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/audio-monitoring/pulse/extr_pulseaudio-wrapper.c_pulseaudio_connect_playback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pulseaudio_connect_playback(i32* %0, i8* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %13 = call i64 (...) @pulseaudio_context_ready()
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %4
  store i32 -1, i32* %5, align 4
  br label %38

16:                                               ; preds = %4
  %17 = load i8*, i8** %7, align 8
  %18 = call i32 @strlen(i8* %17)
  %19 = sub nsw i32 %18, 8
  %20 = sext i32 %19 to i64
  store i64 %20, i64* %10, align 8
  %21 = load i64, i64* %10, align 8
  %22 = add i64 %21, 1
  %23 = call i8* @bzalloc(i64 %22)
  store i8* %23, i8** %11, align 8
  %24 = load i8*, i8** %11, align 8
  %25 = load i8*, i8** %7, align 8
  %26 = load i64, i64* %10, align 8
  %27 = call i32 @memcpy(i8* %24, i8* %25, i64 %26)
  %28 = call i32 (...) @pulseaudio_lock()
  %29 = load i32*, i32** %6, align 8
  %30 = load i8*, i8** %11, align 8
  %31 = load i32*, i32** %8, align 8
  %32 = load i32, i32* %9, align 4
  %33 = call i32 @pa_stream_connect_playback(i32* %29, i8* %30, i32* %31, i32 %32, i32* null, i32* null)
  store i32 %33, i32* %12, align 4
  %34 = call i32 (...) @pulseaudio_unlock()
  %35 = load i8*, i8** %11, align 8
  %36 = call i32 @bfree(i8* %35)
  %37 = load i32, i32* %12, align 4
  store i32 %37, i32* %5, align 4
  br label %38

38:                                               ; preds = %16, %15
  %39 = load i32, i32* %5, align 4
  ret i32 %39
}

declare dso_local i64 @pulseaudio_context_ready(...) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i8* @bzalloc(i64) #1

declare dso_local i32 @memcpy(i8*, i8*, i64) #1

declare dso_local i32 @pulseaudio_lock(...) #1

declare dso_local i32 @pa_stream_connect_playback(i32*, i8*, i32*, i32, i32*, i32*) #1

declare dso_local i32 @pulseaudio_unlock(...) #1

declare dso_local i32 @bfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
